@@ -292,10 +292,9 @@ if ($ARGV[0] eq "init"){
 		            if (open(IPCMSG,"< /proc/sysvipc/msg")) {
 		                <IPCMSG>;
 		                while (<IPCMSG>) {
-		                    if (/^\s*\d+\s+(\d+)(?:\s+\d+){5}\s+$useruid(?:\s+\d+){6}$/) {
+		                    if (/^\s*\d+\s+(\d+)(?:\s+\d+){5}\s+$useruid(?:\s+\d+){6}/) {
 		                        $ipcrm_args .= " -q $1";
-				    } else {
-		                	print_log(3,"Cannot parse IPC MSG: $_.");
+		                	    print_log(3,"Found IPC MSG for user $useruid: $1.");
 		                    }
 		                }
 		                close (IPCMSG);
@@ -305,10 +304,9 @@ if ($ARGV[0] eq "init"){
 		            if (open(IPCSHM,"< /proc/sysvipc/shm")) {
 		                <IPCSHM>;
 		                while (<IPCSHM>) {
-		                    if (/^\s*\d+\s+(\d+)(?:\s+\d+){5}\s+$useruid(?:\s+\d+){6}$/) {
+		                    if (/^\s*\d+\s+(\d+)(?:\s+\d+){5}\s+$useruid(?:\s+\d+){6}/) {
 		                        $ipcrm_args .= " -m $1";
-				    } else {
-		                	print_log(3,"Cannot parse IPC SHM: $_.");
+		                	    print_log(3,"Found IPC SHM for user $useruid: $1.");
 		                    }
 		                }
 		                close (IPCSHM);
@@ -318,10 +316,9 @@ if ($ARGV[0] eq "init"){
 		            if (open(IPCSEM,"< /proc/sysvipc/sem")) {
 		                <IPCSEM>;
 		                while (<IPCSEM>) {
-		                    if (/^\s*\d+\s+(\d+)(?:\s+\d+){2}\s+$useruid(?:\s+\d+){5}$/) {
+		                    if (/^\s*[\d\-]+\s+(\d+)(?:\s+\d+){2}\s+$useruid(?:\s+\d+){5}/) {
 		                        $ipcrm_args .= " -s $1";
-				    } else {
-		                	print_log(3,"Cannot parse IPC SEM: $_.\n");
+		                	    print_log(3,"Found IPC SEM for user $useruid: $1.");
 		                    }
 		                }
 		                close (IPCSEM);
